# hedgehog

./: .gitignore  Cargo.toml  LICENSE  README.md  STYLE.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: api-guide.md  api-sketch.md  debugging.md  derive-macros.md  design.md  distribution-shaping.md  ideas.md  overview.md  parallel-testing-plan.md  property-classification.md  regression-corpus.md  roadmap.md  splitting.md  targeted-testing-comparison.md  trophy.md  variable-name-tracking.md
docs/contributing/: implementation-plan.md  meta-testing-lessons.md  release.md
docs/design/: api-sketch.md  coverage-guided-generation.md  targeted-testing-comparison.md  targeted-testing-effectiveness-analysis.md  targeted-testing-future-improvements.md
docs/guides/: advanced-features.md  distribution-shaping.md  getting-started.md  variable-name-tracking.md
examples/: basic.rs  classification.rs  derive-macro.rs  derive-simple.rs  distribution-shaping.rs  generators.rs  parallel-testing.rs  real-world-patterns.rs  shrinking.rs  targeted-testing.rs  tree-output.rs  variable_name_tracking.rs
hedgehog/: Cargo.toml  README.md
hedgehog-cli/: Cargo.toml  README.md
hedgehog-cli/snapshots/: cli_coverage_help_output.snap  cli_discover_help_output.snap  cli_discover_json_output.snap  cli_discover_output.snap  cli_enhance_test_output_compilation_error.snap  cli_enhance_test_output_complex.snap  cli_enhance_test_output_mixed_results.snap  cli_enhance_test_output_property_failure.snap  cli_format_config_output_full.snap  cli_format_config_output_minimal.snap  cli_format_coverage_header.snap  cli_format_failure.snap  cli_format_header.snap  cli_format_report_message.snap  cli_format_success.snap  cli_help_output.snap  cli_report_help_output.snap  cli_test_help_output.snap
hedgehog-cli/src/: discovery.rs  lib.rs  main.rs
hedgehog-cli/tests/: integration.rs
hedgehog-core/: Cargo.toml  README.md
hedgehog-core/docs/: api-reference.md  getting-started.md  parallel-testing.md  state-machine-testing.md  test-analysis.md  tutorial.md
hedgehog-core/examples/: state-machine-examples.rs
hedgehog-core/snapshots/: boolean_tree_render_shrinks.snap  character_tree_render_shrinks.snap  classification_output.snap  enhanced_failure_reporting.snap  enhanced_success_reporting.snap  float_tree_render_compact.snap  float_tree_render_shrinks.snap  integer_tree_render.snap  integer_tree_render_compact.snap  integer_tree_render_numbered.snap  integer_tree_render_shrinks.snap  string_tree_render.snap  string_tree_render_compact.snap  string_tree_render_numbered.snap  string_tree_render_shrinks.snap  variable_name_failure_reporting.snap
hedgehog-core/src/: data.rs  error.rs  gen.rs  lib.rs  parallel.rs  property.rs  state.rs  targeted.rs  tree.rs
hedgehog-core/src/tree/: render.rs
hedgehog-derive/: Cargo.toml  README.md
hedgehog-derive/src/: lib.rs
hedgehog/examples/: dictionary-support.rs  example-integration.rs  function-generators.rs
hedgehog/src/: corpus.rs  lib.rs
hedgehog/tests/: derive-macro-test.rs  meta-testing.rs  new-api-test.rs  quickstart-example.rs
hedgehog/tests/meta-testing/: combinator-properties.rs  composition-properties.rs  corpus-properties.rs  distribution-validation.rs  edge-case-properties.rs  generator-invariants.rs  integration-properties.rs  parallel-properties.rs  performance-properties.rs  result-option-properties.rs  shrinking-properties.rs  state-machine-properties.rs  string-properties.rs  targeted-properties.rs
