[package]
name = "hedgehog-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core functionality for Hedgehog property-based testing"
keywords.workspace = true
categories.workspace = true

[dependencies]
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
archetype = "0.2"

[[example]]
name = "generators"
path = "../examples/generators.rs"

[[example]]
name = "shrinking"
path = "../examples/shrinking.rs"

[[example]]
name = "tree-output"
path = "../examples/tree_output.rs"