[package]
name = "hedgehog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
derive = ["dep:hedgehog-derive"]

[dependencies]
hedgehog-core = { path = "../hedgehog-core" }
hedgehog-derive = { path = "../hedgehog-derive", optional = true }

[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "distribution_shaping"
path = "../examples/distribution_shaping.rs"

[[example]]
name = "variable_name_tracking"
path = "../examples/variable_name_tracking.rs"