[package]
name = "hedgehog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
derive = ["dep:hedgehog-derive"]

[dependencies]
hedgehog-core = { path = "../hedgehog-core" }
hedgehog-derive = { path = "../hedgehog-derive", optional = true }

[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "distribution-shaping"
path = "../examples/distribution-shaping.rs"

[[example]]
name = "variable-name-tracking"
path = "../examples/variable-name-tracking.rs"

[[example]]
name = "derive-macro"
path = "../examples/derive-macro.rs"
required-features = ["derive"]

[[example]]
name = "derive-simple"
path = "../examples/derive-simple.rs"
required-features = ["derive"]

[[example]]
name = "generators"
path = "../examples/generators.rs"

[[example]]
name = "shrinking"
path = "../examples/shrinking.rs"

[[example]]
name = "tree-output"
path = "../examples/tree-output.rs"